--- a/content/data/config.json
+++ b/content/data/config.json
@@ -46,7 +46,7 @@
                 "style": "link"
             },
             {
-                "label": "Get Started",
+                "label": "Get a Quote",
                 "url": "/pricing",
                 "style": "primary"
             }
