--- a/content/data/config.json
+++ b/content/data/config.json
@@ -51,7 +51,7 @@
         "logo": "images/classic/logo.svg",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
-        "primary_nav_title": "Company",
+        "primary_nav_title": "LeadLance.in",
         "primary_nav_links": [
             {
                 "label": "About",
