--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
                 "style": "link"
             },
             {
-                "label": "Style Guide",
+                "label": "Work",
                 "url": "/style-guide",
                 "style": "link"
             }
