--- a/content/data/config.json
+++ b/content/data/config.json
@@ -48,7 +48,7 @@
         ]
     },
     "footer": {
-        "logo": "images/classic/logo.svg",
+        "logo": "/images/classic/icon-3.svg",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
         "primary_nav_title": "LeadLance.in",
