--- a/content/data/config.json
+++ b/content/data/config.json
@@ -1,5 +1,5 @@
 {
-    "title": "LeadLance.in - w",
+    "title": "LeadLance.in - ",
     "path_prefix": "/",
     "layout_type": "full-width",
     "style": "classic",
