--- a/content/data/config.json
+++ b/content/data/config.json
@@ -147,5 +147,6 @@
         ],
         "content": "&copy; Stackbit. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=diy&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
     },
-    "domain": "https://leadlance.netlify.app"
+    "domain": "https://leadlance.netlify.app",
+    "favicon": "/images/classic/icon-3.svg"
 }
