--- a/content/data/config.json
+++ b/content/data/config.json
@@ -37,7 +37,7 @@
         "secondary_nav_links": [
             {
                 "label": "Contact",
-                "url": "/contact",
+                "url": "/ge",
                 "style": "link"
             },
             {
