config.json: updated style in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,7 +38,7 @@
             {
                 "label": "Contact",
                 "url": "/general-enquiries",
-                "style": "link"
+                "style": "secondary"
             },
             {
                 "label": "Get a Quote",
